# faraday-battery

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1  package.ps1
data/: schema.sql
docs/: ARCHITECTURE.md  AV_HARDENING.md  BUILD.md  CHANGELOG.md  DATA_SOURCES.md  FALSE_POSITIVE_RESPONSE.md  FIELD_TESTING.md  METRICS.md  PORTABLE.md  README.md  RELIABILITY_RESULTS.md  SECURITY_AUDIT.md  SHIP_READINESS.md  VIRUSTOTAL_BASELINE.md
docs/FP_SUBMISSIONS/: ArcticWolf.md  Elastic.md  Trapmine.md
i18n/: faraday_en.ts
installer/: faraday.nsi
resources/: app.manifest  faraday.rc  icons.qrc  launcher.rc
src/: main.cpp
src/acquisition/: BatteryReader.cpp  BatteryReader.h  BatteryTypes.h  PowercfgReport.cpp  PowercfgReport.h  WmiClient.cpp  WmiClient.h
src/app/: AlertManager.cpp  AlertManager.h  Autostart.cpp  Autostart.h  BatteryModel.cpp  BatteryModel.h  Calibration.cpp  Calibration.h  ChargeCap.cpp  ChargeCap.h  Exporter.cpp  Exporter.h  PortableMode.cpp  PortableMode.h  Sampler.cpp  Sampler.h  TrayManager.cpp  TrayManager.h
src/core/: HealthVerdict.cpp  HealthVerdict.h  Metrics.cpp  Metrics.h
src/data/: Database.cpp  Database.h  Settings.cpp  Settings.h
src/launcher/: launcher_main.cpp
tests/: CMakeLists.txt  COVERAGE_MAP.md  PERF_RESULTS.md  PowercfgFixture.cpp  PowercfgFixture.h  PropertyGen.h  SyntheticData.h  test_alerts.cpp  test_autostart.cpp  test_battery_model.cpp  test_battery_reader.cpp  test_bench_perf.cpp  test_calibration.cpp  test_clock_jumps.cpp  test_database.cpp  test_exporter.cpp  test_field_defects.cpp  test_fuzz_powercfg.cpp  test_fuzz_reader.cpp  test_fuzz_settings_db.cpp  test_launcher.cpp  test_layout.cpp  test_metrics.cpp  test_metrics_properties.cpp  test_model_paths.cpp  test_portable_mode.cpp  test_powercfg_parser.cpp  test_sampler.cpp  test_scaffold.cpp  test_settings.cpp  test_synthetic_degradation.cpp  test_tray.cpp  test_verdict.cpp  test_wmi_client.cpp
tools/: make_icons.py
ui/: Main.qml  Theme.qml
ui/components/: HealthRing.qml  MetricCard.qml
ui/pages/: AlertsPage.qml  CalibrationPage.qml  DashboardPage.qml  HistoryPage.qml  MonitorPage.qml  PlaceholderPage.qml  SettingsPage.qml
