find_package(Qt6 6.5 REQUIRED COMPONENTS Test)

function(faraday_add_test NAME)
    qt_add_executable(${NAME} ${NAME}.cpp ${ARGN})
    target_link_libraries(${NAME} PRIVATE faradaylib Qt6::Core Qt6::Test)
    add_test(NAME ${NAME} COMMAND ${NAME})
endfunction()

faraday_add_test(test_scaffold)
faraday_add_test(test_powercfg_parser PowercfgFixture.h PowercfgFixture.cpp)
faraday_add_test(test_wmi_client)
faraday_add_test(test_battery_reader)
faraday_add_test(test_metrics)
faraday_add_test(test_verdict)
faraday_add_test(test_database)
faraday_add_test(test_settings)
faraday_add_test(test_sampler)
faraday_add_test(test_battery_model)
faraday_add_test(test_alerts)
faraday_add_test(test_autostart)
faraday_add_test(test_exporter)
faraday_add_test(test_calibration)
faraday_add_test(test_synthetic_degradation SyntheticData.h)
faraday_add_test(test_portable_mode)
faraday_add_test(test_metrics_properties PropertyGen.h)
faraday_add_test(test_fuzz_powercfg PropertyGen.h PowercfgFixture.h PowercfgFixture.cpp)
faraday_add_test(test_fuzz_reader PropertyGen.h)
faraday_add_test(test_fuzz_settings_db PropertyGen.h)
faraday_add_test(test_bench_perf)
faraday_add_test(test_clock_jumps SyntheticData.h)
faraday_add_test(test_model_paths SyntheticData.h)
faraday_add_test(test_tray)
faraday_add_test(test_field_defects SyntheticData.h)
faraday_add_test(test_launcher)
